@@ -1,7 +1,9 @@
 package com.portal.component;
 
+import com.platform.common.list.ListColumnFilter;
 import com.portal.client.WorkflowEngineClient;
 import com.portal.dto.PageResponse;
+import com.portal.dto.PortalListGroup;
 import com.portal.dto.PortalListPage;
 import com.portal.dto.CompletedTaskQueryRequest;
 import com.portal.dto.TaskActionInfo;
@@ -9,7 +11,13 @@ import com.portal.dto.TaskInfo;
 import com.portal.dto.TaskQueryRequest;
 import com.portal.dto.TaskStatistics;
 import com.portal.dto.TaskHistoryInfo;
+import com.portal.dto.TodoTaskQueryRequest;
+import com.portal.util.EngineTaskPushdown;
+import com.portal.util.ListQuerySupport;
 import com.portal.util.RequestContextInheritanceUtils;
+import com.portal.util.TaskInfoListOps;
+import com.portal.util.TaskQueryColumnFilters;
+import com.portal.util.TodoTaskColumnSpec;
 import com.portal.util.WorkflowEnginePayloadHelper;
 import com.platform.security.util.SecurityContextUtils;
 import com.portal.entity.ProcessInstance;
@@ -27,9 +35,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 import org.springframework.stereotype.Component;
-
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 /**
@@ -53,6 +59,8 @@ import java.util.stream.Collectors;
 @Component
 @RequiredArgsConstructor
 public class TaskQueryComponent {
+
+    static final String TODO_LIST_KEY = "todo-tasks";
 
     private final ProcessInstanceRepository processInstanceRepository;
     private final WorkflowEngineClient workflowEngineClient;
@@ -92,13 +100,17 @@ public class TaskQueryComponent {
 
     /**
      * Query pending tasks for a user.
-     * <p>Default: fetch pending tasks from the engine using the requested {@code page}/{@code size},
-     * in parallel with {@link #queryDelegatedTasks} (when applicable), then merge, filter by portal rules,
-     * sort, and paginate the merged list. No hard 1000-row limit.
-     * Keyword/priority filters need the full engine task list; fetch all engine pages by {@code size},
-     * then merge with delegated tasks before filtering.</p>
+     * <p>Default (Mine): engine window page. When chrome is only pushable
+     * ({@code taskName} + createTime/dueDate/priority/name sort), criteria are pushed to the engine.
+     * Non-pushable filters / grouping full-scan engine pages for an exact filtered total.
+     * Standing-rule proxy tasks are <strong>not</strong> merged into Mine — use
+     * {@code assignmentTypes=[DELEGATED]} or the Proxy Tasks menu.</p>
      */
     public PageResponse<TaskInfo> queryTasks(TaskQueryRequest request) {
+        return queryTasks(request, null);
+    }
+
+    private PageResponse<TaskInfo> queryTasks(TaskQueryRequest request, List<PortalListGroup> groupsOut) {
         if (!workflowEngineClient.isAvailable()) {
             throw new IllegalStateException("Flowable engine unavailable, please check if workflow-engine-core service is running");
         }
@@ -110,16 +122,51 @@ public class TaskQueryComponent {
         List<String> assignmentTypes = request.getAssignmentTypes();
         int page = request.getPage() != null ? request.getPage() : 0;
         int size = request.getSize() != null ? request.getSize() : 20;
+        EngineTaskPushdown.Criteria push = EngineTaskPushdown.from(request);
 
         if (isDelegatedOnlyAssignmentFilter(assignmentTypes)) {
-            return queryDelegatedTasksOnlyPage(userId, request, page, size);
+            return queryDelegatedTasksOnlyPage(userId, request, page, size, groupsOut);
         }
 
-        if (needsFullEngineScanBeforeFilters(request)) {
-            return queryTasksFullEnginePagesThenDelegate(userId, request, assignmentTypes, page, size);
-        }
+        return EngineTaskPushdown.canFullyPush(request)
+                ? queryTasksEngineWindowMine(userId, request, assignmentTypes, page, size, push)
+                : queryTasksFullEnginePagesMine(userId, request, assignmentTypes, page, size, push, groupsOut);
+    }
 
-        return queryTasksEngineWindowThenDelegate(userId, request, assignmentTypes, page, size);
+    /**
+     * Shared-list To Do page: same Mine semantics as {@link #queryTasks}, plus column declaration
+     * and in-memory group counts when {@code groupBy} is set.
+     */
+    public PortalListPage<TaskInfo> queryTodoList(String userId, TodoTaskQueryRequest request) {
+        long started = System.nanoTime();
+        List<ListColumnFilter> filters = new ArrayList<>(request.filters());
+        if (!request.priorities().isEmpty()) {
+            filters.add(new ListColumnFilter("priority", "in", String.join(",", request.priorities()), null));
+        }
+        TaskQueryRequest adapted = TaskQueryRequest.builder()
+                .userId(userId)
+                .page(request.page())
+                .size(request.size())
+                .filters(filters)
+                .sortBy(request.sortField())
+                .sortDirection(request.sortDirection())
+                .groupBy(request.groupBy())
+                .keyword(request.keyword())
+                .assignmentTypes(request.assignmentTypes().isEmpty() ? null : request.assignmentTypes())
+                .build();
+        List<PortalListGroup> groups = new ArrayList<>();
+        PageResponse<TaskInfo> page = queryTasks(adapted, groups);
+        if (request.groupBy() != null && !request.groupBy().isBlank()
+                && page.getTotalElements() > 0 && groups.isEmpty()) {
+            throw new IllegalStateException("GROUP BY returned no groups for a non-empty todo result");
+        }
+        long total = page.getTotalElements();
+        long elapsedMs = (System.nanoTime() - started) / 1_000_000L;
+        ListQuerySupport.logIfSlow(log, TODO_LIST_KEY, request.page(), request.size(), total, started);
+        ListQuerySupport.logIfOverSla(log, TODO_LIST_KEY, request.page(), request.size(), total,
+                elapsedMs, elapsedMs, 0L);
+        return new PortalListPage<>(TodoTaskColumnSpec.columns(), page.getContent(), List.copyOf(groups),
+                request.page(), request.size(), total);
     }
 
     private static boolean isDelegatedOnlyAssignmentFilter(List<String> assignmentTypes) {
@@ -128,96 +175,135 @@ public class TaskQueryComponent {
                 && "DELEGATED".equalsIgnoreCase(assignmentTypes.get(0));
     }
 
-    /**
-     * Keyword, priority, etc. must be filtered over the full engine task list;
-     * fetch all pages from the engine with the requested page size (no row limit).
-     */
-    private boolean needsFullEngineScanBeforeFilters(TaskQueryRequest request) {
-        if (request.getPriorities() != null && !request.getPriorities().isEmpty()) {
-            return true;
-        }
-        if (request.getKeyword() != null && !request.getKeyword().isBlank()) {
-            return true;
-        }
-        if (request.getProcessTypes() != null && !request.getProcessTypes().isEmpty()) {
-            return true;
-        }
-        if (request.getStatuses() != null && !request.getStatuses().isEmpty()) {
-            return true;
-        }
-        if (request.getStartTime() != null || request.getEndTime() != null) {
-            return true;
-        }
-        if (Boolean.TRUE.equals(request.getIncludeOverdue())) {
-            return true;
-        }
-        String sortBy = request.getSortBy();
-        if (sortBy != null && !sortBy.isBlank() && !"createTime".equalsIgnoreCase(sortBy)) {
-            return true;
-        }
-        String sortDir = request.getSortDirection();
-        return sortDir != null && !sortDir.isBlank() && !"desc".equalsIgnoreCase(sortDir);
-    }
-
     private PageResponse<TaskInfo> queryDelegatedTasksOnlyPage(
-            String userId, TaskQueryRequest request, int page, int size) {
+            String userId, TaskQueryRequest request, int page, int size, List<PortalListGroup> groupsOut) {
         List<TaskInfo> allTasks = new ArrayList<>(queryDelegatedTasks(userId));
         allTasks = applyPortalPostEngineFilters(userId, allTasks);
+        maybeEnrichRequestIdsForColumnFilter(allTasks, request);
         allTasks = applyFilters(allTasks, request);
-        allTasks = applySorting(allTasks, request);
-        int start = page * size;
-        int end = Math.min(start + size, allTasks.size());
-        List<TaskInfo> pagedTasks = start < allTasks.size()
-                ? allTasks.subList(start, end)
-                : Collections.emptyList();
+        allTasks = TaskInfoListOps.applySorting(allTasks, request);
+        if (groupsOut != null && request.getGroupBy() != null && !request.getGroupBy().isBlank()) {
+            groupsOut.addAll(TaskInfoListOps.groupsOf(allTasks, request.getGroupBy()));
+        }
+        List<TaskInfo> pagedTasks = TaskInfoListOps.pageOf(allTasks, page, size);
         requestIdEnricher.enrichTaskRequestIds(pagedTasks);
         EngineTaskMapper.clearTaskVariablesForList(pagedTasks);
         return PageResponse.of(pagedTasks, page, size, allTasks.size());
     }
 
-    private PageResponse<TaskInfo> queryTasksFullEnginePagesThenDelegate(
+    private PageResponse<TaskInfo> queryTasksFullEnginePagesMine(
             String userId,
             TaskQueryRequest request,
             List<String> assignmentTypes,
             int page,
-            int size) {
-        boolean includeDelegated = assignmentTypes == null || assignmentTypes.isEmpty()
-                || assignmentTypes.contains("DELEGATED");
-
+            int size,
+            EngineTaskPushdown.Criteria push,
+            List<PortalListGroup> groupsOut) {
         SecurityContext ctx = SecurityContextHolder.getContext();
         ServletRequestAttributes attrs = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
 
-        CompletableFuture<List<TaskInfo>> engineAllFuture = CompletableFuture.supplyAsync(() ->
-                RequestContextInheritanceUtils.runWithInheritedRequestAndSecurity(ctx, attrs,
-                        () -> fetchAllEngineTasksPaged(userId, assignmentTypes, size)), taskQueryExecutor);
+        String cacheKey = fullScanCacheKey(userId, request, assignmentTypes, size);
+        FullScanCacheEntry cached = getCachedFullScanEntry(cacheKey);
+        List<TaskInfo> filteredSorted;
+        if (cached != null) {
+            filteredSorted = cached.tasks();
+            log.info("[PERF] query.fullScan cacheHit=true engineTasks={}", filteredSorted.size());
+        } else {
+            long __tFetch0 = System.nanoTime();
+            List<TaskInfo> engineTasks = RequestContextInheritanceUtils.runWithInheritedRequestAndSecurity(ctx, attrs,
+                    () -> fetchAllEngineTasksPaged(userId, assignmentTypes, size, push));
+            long __tFetch1 = System.nanoTime();
 
-        CompletableFuture<List<TaskInfo>> delegatedFuture = includeDelegated
-                ? CompletableFuture.supplyAsync(() ->
-                RequestContextInheritanceUtils.runWithInheritedRequestAndSecurity(ctx, attrs, () -> queryDelegatedTasks(userId)), taskQueryExecutor)
-                : CompletableFuture.completedFuture(Collections.emptyList());
+            List<TaskInfo> allTasks = applyPortalPostEngineFilters(userId, new ArrayList<>(engineTasks));
+            long __tPost = System.nanoTime();
+            maybeEnrichRequestIdsForColumnFilter(allTasks, request);
+            allTasks = applyFilters(allTasks, request);
+            allTasks = TaskInfoListOps.applySorting(allTasks, request);
+            long __tMem = System.nanoTime();
+            filteredSorted = List.copyOf(allTasks);
+            putCachedFullScan(cacheKey, filteredSorted);
+            log.info("[PERF] query.fullScan engineAllPages={}ms postFilter={}ms memFilterSort={}ms "
+                            + "engineTasks={} filtered={} pushNameLike={} pushNameExact={} pushSort={}/{}",
+                    (__tFetch1 - __tFetch0) / 1_000_000L,
+                    (__tPost - __tFetch1) / 1_000_000L,
+                    (__tMem - __tPost) / 1_000_000L,
+                    engineTasks.size(),
+                    filteredSorted.size(),
+                    push != null ? push.taskNameLike() : null,
+                    push != null ? push.taskNameExact() : null,
+                    push != null ? push.sortBy() : null,
+                    push != null ? push.sortDirection() : null);
+        }
 
-        long __tF0 = System.nanoTime();
-        List<TaskInfo> engineTasks = engineAllFuture.join();
-        List<TaskInfo> delegated = delegatedFuture.join();
-        long __tFJoin = System.nanoTime();
-
-        List<TaskInfo> allTasks = new ArrayList<>(engineTasks);
-        allTasks.addAll(delegated);
-        allTasks = applyPortalPostEngineFilters(userId, allTasks);
-        long __tFFilter = System.nanoTime();
-        log.info("[PERF] query.fullScan parallel(engineAllPages+delegated)={}ms postFilter={}ms engineTasks={} delegated={} merged={}",
-                (__tFJoin - __tF0) / 1_000_000L, (__tFFilter - __tFJoin) / 1_000_000L,
-                engineTasks.size(), delegated.size(), allTasks.size());
-        allTasks = applyFilters(allTasks, request);
-        allTasks = applySorting(allTasks, request);
-        int start = page * size;
-        int end = Math.min(start + size, allTasks.size());
-        List<TaskInfo> pagedTasks = start < allTasks.size()
-                ? allTasks.subList(start, end)
-                : Collections.emptyList();
+        if (groupsOut != null && request.getGroupBy() != null && !request.getGroupBy().isBlank()) {
+            groupsOut.addAll(TaskInfoListOps.groupsOf(filteredSorted, request.getGroupBy()));
+        }
+        List<TaskInfo> pagedTasks = new ArrayList<>(TaskInfoListOps.pageOf(filteredSorted, page, size));
         requestIdEnricher.enrichTaskRequestIds(pagedTasks);
         EngineTaskMapper.clearTaskVariablesForList(pagedTasks);
-        return PageResponse.of(pagedTasks, page, size, allTasks.size());
+        return PageResponse.of(pagedTasks, page, size, filteredSorted.size());
+    }
+
+    private static final int FULL_SCAN_CACHE_TTL_MS = 15_000;
+    private static final int FULL_SCAN_CACHE_MAX = 64;
+    private final Map<String, FullScanCacheEntry> fullScanCache = Collections.synchronizedMap(
+            new LinkedHashMap<>(32, 0.75f, true) {
+                @Override
+                protected boolean removeEldestEntry(Map.Entry<String, FullScanCacheEntry> eldest) {
+                    return size() > FULL_SCAN_CACHE_MAX;
+                }
+            });
+
+    private record FullScanCacheEntry(List<TaskInfo> tasks, long cachedAt) {
+        boolean isExpired() {
+            return System.currentTimeMillis() - cachedAt > FULL_SCAN_CACHE_TTL_MS;
+        }
+    }
+
+    private FullScanCacheEntry getCachedFullScanEntry(String key) {
+        FullScanCacheEntry e = fullScanCache.get(key);
+        if (e == null || e.isExpired()) {
+            if (e != null) {
+                fullScanCache.remove(key);
+            }
+            return null;
+        }
+        return e;
+    }
+
+    private void putCachedFullScan(String key, List<TaskInfo> tasks) {
+        fullScanCache.put(key, new FullScanCacheEntry(tasks, System.currentTimeMillis()));
+    }
+
+    private static String fullScanCacheKey(
+            String userId, TaskQueryRequest request, List<String> assignmentTypes, int size) {
+        return userId + '|'
+                + SecurityContextUtils.getCurrentActiveBusinessUnitId().orElse("-") + '|'
+                + SecurityContextUtils.getCurrentActiveRoleId().orElse("-") + '|'
+                + String.valueOf(assignmentTypes) + '|'
+                + size + '|'
+                + String.valueOf(request.getFilters()) + '|'
+                + String.valueOf(request.getSortBy()) + '|'
+                + String.valueOf(request.getSortDirection()) + '|'
+                + String.valueOf(request.getGroupBy()) + '|'
+                + String.valueOf(request.getKeyword()) + '|'
+                + String.valueOf(request.getPriorities()) + '|'
+                + String.valueOf(request.getProcessTypes()) + '|'
+                + String.valueOf(request.getStatuses()) + '|'
+                + String.valueOf(request.getStartTime()) + '|'
+                + String.valueOf(request.getEndTime()) + '|'
+                + String.valueOf(request.getIncludeOverdue());
+    }
+
+    /** Fill requestId before filter, keyword, or A→Z sort so chrome matches the visible cell. */
+    private void maybeEnrichRequestIdsForColumnFilter(List<TaskInfo> tasks, TaskQueryRequest request) {
+        var filters = TaskQueryColumnFilters.normalize(request.getFilters());
+        boolean needsRequestId = filters.stream().anyMatch(f -> "requestId".equals(f.field()))
+                || (request.getKeyword() != null && !request.getKeyword().isBlank())
+                || (request.getSortBy() != null && "requestId".equalsIgnoreCase(request.getSortBy().trim()));
+        if (needsRequestId) {
+            requestIdEnricher.enrichTaskRequestIds(tasks);
+        }
     }
 
     /**
@@ -226,14 +312,12 @@ public class TaskQueryComponent {
     private record EngineWindowResult(List<TaskInfo> tasks, long engineTotal) {
     }
 
-    /**
-     * Fetch one page of tasks from the engine using page/size; merge from the initiator's
-     * RUNNING instances as a fallback path if the result is empty.
-     */
     private EngineWindowResult fetchEngineTaskPageWindow(
-            String userId, List<String> assignmentTypes, int page, int size) {
+            String userId, List<String> assignmentTypes, int page, int size,
+            EngineTaskPushdown.Criteria push) {
         List<TaskInfo> engineTasks = new ArrayList<>();
         long engineTotal = 0L;
+        EngineTaskPushdown.Criteria safePush = push != null ? push : EngineTaskPushdown.Criteria.empty();
         try {
             long __tw0 = System.nanoTime();
             List<String> groupIds = workspaceTaskFilter.getUserVirtualGroups(userId);
@@ -242,102 +326,103 @@ public class TaskQueryComponent {
             boolean includeGroups = assignmentTypes == null || assignmentTypes.isEmpty()
                     || assignmentTypes.contains("VIRTUAL_GROUP");
             Optional<Map<String, Object>> result = includeGroups
-                    ? workflowEngineClient.getUserAllVisibleTasks(userId, groupIds, Collections.emptyList(), page, size)
-                    : workflowEngineClient.getUserTasks(userId, page, size);
-            log.info("[PERF] engineWindow vgroups={}ms engineHttp={}ms groupCount={} includeGroups={}",
+                    ? workflowEngineClient.getUserAllVisibleTasks(
+                            userId, groupIds, Collections.emptyList(), page, size, safePush)
+                    : workflowEngineClient.getUserAllVisibleTasks(
+                            userId, Collections.emptyList(), Collections.emptyList(), page, size, safePush);
+            log.info("[PERF] engineWindow vgroups={}ms engineHttp={}ms groupCount={} includeGroups={} push={}",
                     (__twVg - __tw0) / 1_000_000L, (System.nanoTime() - __twVg) / 1_000_000L,
-                    groupIds != null ? groupIds.size() : 0, includeGroups);
-            if (result.isPresent()) {
-                Map<String, Object> responseBody = result.get();
-                engineTotal = EngineTaskMapper.extractEngineTotalCount(responseBody);
-                List<Map<String, Object>> tasks = WorkflowEnginePayloadHelper.taskListFromPayload(responseBody);
-                if (tasks != null) {
-                    for (Map<String, Object> taskMap : tasks) {
-                        engineTasks.add(EngineTaskMapper.convertMapToTaskInfo(taskMap));
-                    }
+                    groupIds != null ? groupIds.size() : 0, includeGroups, safePush.hasAny());
+            // Client maps HTTP/unavailable to Optional.empty(); a 2xx empty page is Optional.of.
+            if (result.isEmpty()) {
+                throw new IllegalStateException("Failed to query tasks from Flowable: engine returned no payload");
+            }
+            Map<String, Object> responseBody = result.get();
+            engineTotal = EngineTaskMapper.extractEngineTotalCount(responseBody);
+            List<Map<String, Object>> tasks = WorkflowEnginePayloadHelper.taskListFromPayload(responseBody);
+            if (tasks != null) {
+                for (Map<String, Object> taskMap : tasks) {
+                    engineTasks.add(EngineTaskMapper.convertMapToTaskInfo(taskMap));
                 }
             }
+        } catch (IllegalStateException e) {
+            throw e;
         } catch (Exception e) {
             log.error("Failed to query tasks from Flowable: {}", e.getMessage(), e);
             throw new IllegalStateException("Failed to query tasks from Flowable: " + e.getMessage(), e);
         }
 
-        if (engineTasks.isEmpty()) {
+        // Pushdown empty means "no match", not "engine unavailable". The initiator merge
+        // walks every RUNNING PI (N+1) and would dump hundreds of unfiltered rows.
+        // Sort-only pushdown must still allow initiator orphan merge; filter pushdown must not.
+        if (engineTasks.isEmpty() && !safePush.hasFilterFragments()) {
             mergeTasksFromRunningProcessInstancesForUser(userId, engineTasks);
         }
         return new EngineWindowResult(engineTasks, engineTotal);
     }
 
     /**
-     * Fetch engine tasks using the requested {@code page}/{@code size}, then synchronously fetch
-     * delegated tasks; merge, sort, then slice (current page = page {@code page} of merged list).
-     * Engine and delegated task fetches run in parallel when possible to reduce first-screen latency.
+     * Mine: trust engine {@code page}/{@code size}/{@code total} only when the window is intact.
+     * If portal post-filter drops rows or the engine over-returns, fall back to fullScan.
      */
-    private PageResponse<TaskInfo> queryTasksEngineWindowThenDelegate(
+    private PageResponse<TaskInfo> queryTasksEngineWindowMine(
             String userId,
             TaskQueryRequest request,
             List<String> assignmentTypes,
             int page,
-            int size) {
-        boolean includeDelegated = assignmentTypes == null || assignmentTypes.isEmpty()
-                || assignmentTypes.contains("DELEGATED");
-
+            int size,
+            EngineTaskPushdown.Criteria push) {
         SecurityContext ctx = SecurityContextHolder.getContext();
         ServletRequestAttributes attrs = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
 
-        CompletableFuture<EngineWindowResult> engineFuture = CompletableFuture.supplyAsync(() ->
-                RequestContextInheritanceUtils.runWithInheritedRequestAndSecurity(ctx, attrs,
-                        () -> fetchEngineTaskPageWindow(userId, assignmentTypes, page, size)), taskQueryExecutor);
-
-        CompletableFuture<List<TaskInfo>> delegatedFuture = includeDelegated
-                ? CompletableFuture.supplyAsync(() ->
-                RequestContextInheritanceUtils.runWithInheritedRequestAndSecurity(ctx, attrs, () -> queryDelegatedTasks(userId)), taskQueryExecutor)
-                : CompletableFuture.completedFuture(Collections.emptyList());
-
         long __tQ0 = System.nanoTime();
-        EngineWindowResult engineResult = engineFuture.join();
+        EngineWindowResult engineResult = RequestContextInheritanceUtils.runWithInheritedRequestAndSecurity(ctx, attrs,
+                () -> fetchEngineTaskPageWindow(userId, assignmentTypes, page, size, push));
         List<TaskInfo> engineTasks = engineResult.tasks();
         long engineTotal = engineResult.engineTotal();
-        List<TaskInfo> delegated = delegatedFuture.join();
         long __tQJoin = System.nanoTime();
 
-        List<TaskInfo> allTasks = new ArrayList<>(engineTasks);
-        allTasks.addAll(delegated);
-        allTasks = applyPortalPostEngineFilters(userId, allTasks);
+        List<TaskInfo> pageTasks = applyPortalPostEngineFilters(userId, new ArrayList<>(engineTasks));
+        if (engineWindowUnreliable(engineTasks, pageTasks, size)) {
+            log.info("[PERF] engine window unusable after post-filter (engine={} filtered={} size={}); fullScan",
+                    engineTasks.size(), pageTasks.size(), size);
+            return queryTasksFullEnginePagesMine(userId, request, assignmentTypes, page, size, push, null);
+        }
         long __tQFilter = System.nanoTime();
-        log.info("[PERF] query.window parallel(engine+delegated)={}ms postFilter={}ms engineTasks={} delegated={} merged={}",
+        log.info("[PERF] query.window mine engine={}ms postFilter={}ms engineTasks={} total={} push={}",
                 (__tQJoin - __tQ0) / 1_000_000L, (__tQFilter - __tQJoin) / 1_000_000L,
-                engineTasks.size(), delegated.size(), allTasks.size());
-        allTasks = applySorting(allTasks, request);
+                engineTasks.size(), engineTotal, push != null && push.hasAny());
 
-        int start = page * size;
-        int end = Math.min(start + size, allTasks.size());
-        List<TaskInfo> pagedTasks = start < allTasks.size()
-                ? allTasks.subList(start, end)
-                : Collections.emptyList();
-
-        boolean enginePageComplete = engineTasks.size() < size || engineTotal <= (long) (page + 1) * size;
-        long totalElements = enginePageComplete
-                ? allTasks.size()
-                : Math.max(engineTotal + (long) delegated.size(), (long) allTasks.size());
-
-        requestIdEnricher.enrichTaskRequestIds(pagedTasks);
-        EngineTaskMapper.clearTaskVariablesForList(pagedTasks);
-        return PageResponse.of(pagedTasks, page, size, totalElements);
+        requestIdEnricher.enrichTaskRequestIds(pageTasks);
+        EngineTaskMapper.clearTaskVariablesForList(pageTasks);
+        long totalElements = engineTotal > 0 ? engineTotal : pageTasks.size();
+        return PageResponse.of(pageTasks, page, size, totalElements);
     }
 
-    private List<TaskInfo> fetchAllEngineTasksPaged(String userId, List<String> assignmentTypes, int pageSize) {
+    /** Engine OFFSET is wrong if the payload is oversized or portal dropped rows. */
+    private static boolean engineWindowUnreliable(
+            List<TaskInfo> engineTasks, List<TaskInfo> pageTasks, int size) {
+        return pageTasks.size() != engineTasks.size() || engineTasks.size() > size;
+    }
+
+    private List<TaskInfo> fetchAllEngineTasksPaged(
+            String userId, List<String> assignmentTypes, int pageSize, EngineTaskPushdown.Criteria push) {
         List<String> groupIds = workspaceTaskFilter.getUserVirtualGroups(userId);
         groupIds = workspaceTaskFilter.filterVirtualGroupsForActiveWorkspace(userId, groupIds);
         boolean includeGroups = assignmentTypes == null || assignmentTypes.isEmpty()
                 || assignmentTypes.contains("VIRTUAL_GROUP");
+        EngineTaskPushdown.Criteria safePush = push != null ? push : EngineTaskPushdown.Criteria.empty();
         List<TaskInfo> out = new ArrayList<>();
+        final int batch = 500;
         for (int p = 0; ; p++) {
             Optional<Map<String, Object>> result = includeGroups
-                    ? workflowEngineClient.getUserAllVisibleTasks(userId, groupIds, Collections.emptyList(), p, pageSize)
-                    : workflowEngineClient.getUserTasks(userId, p, pageSize);
+                    ? workflowEngineClient.getUserAllVisibleTasks(
+                            userId, groupIds, Collections.emptyList(), p, batch, safePush)
+                    : workflowEngineClient.getUserAllVisibleTasks(
+                            userId, Collections.emptyList(), Collections.emptyList(), p, batch, safePush);
             if (result.isEmpty()) {
-                break;
+                throw new IllegalStateException(
+                        "Failed to query tasks from Flowable during full scan page " + p);
             }
             List<Map<String, Object>> tasks = WorkflowEnginePayloadHelper.taskListFromPayload(result.get());
             if (tasks == null || tasks.isEmpty()) {
@@ -346,11 +431,12 @@ public class TaskQueryComponent {
             for (Map<String, Object> taskMap : tasks) {
                 out.add(EngineTaskMapper.convertMapToTaskInfo(taskMap));
             }
-            if (tasks.size() < pageSize) {
+            if (tasks.size() < batch) {
                 break;
             }
+            // Extremely large Mine sets: continue, but prefer larger batch over UI page size.
         }
-        if (out.isEmpty()) {
+        if (out.isEmpty() && !safePush.hasAny()) {
             mergeTasksFromRunningProcessInstancesForUser(userId, out);
         }
         return out;
@@ -368,11 +454,9 @@ public class TaskQueryComponent {
                     return pid == null || pid.isBlank() || !withdrawnProcessIds.contains(pid);
                 })
                 .collect(Collectors.toCollection(ArrayList::new));
-        filtered = filtered.stream()
-                .collect(Collectors.toMap(TaskInfo::getTaskId, t -> t, (t1, t2) -> t1))
-                .values()
-                .stream()
-                .collect(Collectors.toList());
+        filtered = new ArrayList<>(filtered.stream()
+                .collect(Collectors.toMap(TaskInfo::getTaskId, t -> t, (t1, t2) -> t1, LinkedHashMap::new))
+                .values());
         String portalUsername = SecurityContextUtils.getCurrentUsername().orElse(null);
         if (taskProcessComponent != null) {
             filtered = filtered.stream()
@@ -583,9 +667,10 @@ public class TaskQueryComponent {
     }
 
     /**
-     * Apply filter criteria.
+     * Apply filter criteria (legacy keyword/priority lists AND shared-list column filters).
      */
     private List<TaskInfo> applyFilters(List<TaskInfo> tasks, TaskQueryRequest request) {
+        List<ListColumnFilter> columnFilters = TaskQueryColumnFilters.normalize(request.getFilters());
         return tasks.stream()
                 .filter(t -> {
                     // Priority filter
@@ -624,41 +709,28 @@ public class TaskQueryComponent {
                             return false;
                         }
                     }
-                    // Keyword search (including initiator name)
-                    if (request.getKeyword() != null && !request.getKeyword().isEmpty()) {
-                        String keyword = request.getKeyword().toLowerCase();
-                        boolean matches = (t.getTaskName() != null && t.getTaskName().toLowerCase().contains(keyword))
-                                || (t.getDescription() != null && t.getDescription().toLowerCase().contains(keyword))
-                                || (t.getProcessDefinitionName() != null && t.getProcessDefinitionName().toLowerCase().contains(keyword))
-                                || (t.getInitiatorName() != null && t.getInitiatorName().toLowerCase().contains(keyword));
-                        if (!matches) {
-                            return false;
+                    // Keyword search (visible To Do cells + description).
+                    if (!TaskQueryColumnFilters.toolbarKeywordMatches(t, request.getKeyword())) {
+                        return false;
+                    }
+                    if (!columnFilters.isEmpty() && !TaskQueryColumnFilters.matches(t, columnFilters)) {
+                        return false;
+                    }
+                    // Optional assignmentTypes (Mine) — DELEGATED-only is handled earlier.
+                    if (request.getAssignmentTypes() != null && !request.getAssignmentTypes().isEmpty()) {
+                        List<String> types = request.getAssignmentTypes().stream()
+                                .filter(s -> s != null && !"DELEGATED".equalsIgnoreCase(s))
+                                .toList();
+                        if (!types.isEmpty()) {
+                            String at = t.getAssignmentType();
+                            if (at == null || types.stream().noneMatch(x -> x.equalsIgnoreCase(at))) {
+                                return false;
+                            }
                         }
                     }
                     return true;
                 })
                 .collect(Collectors.toList());
-    }
-
-    /**
-     * Apply sorting.
-     */
-    private List<TaskInfo> applySorting(List<TaskInfo> tasks, TaskQueryRequest request) {
-        String sortBy = request.getSortBy() != null ? request.getSortBy() : "createTime";
-        boolean ascending = "asc".equalsIgnoreCase(request.getSortDirection());
-
-        Comparator<TaskInfo> comparator = switch (sortBy) {
-            case "priority" -> Comparator.comparing(TaskInfo::getPriority, Comparator.nullsLast(Comparator.naturalOrder()));
-            case "dueDate" -> Comparator.comparing(TaskInfo::getDueDate, Comparator.nullsLast(Comparator.naturalOrder()));
-            case "taskName" -> Comparator.comparing(TaskInfo::getTaskName, Comparator.nullsLast(Comparator.naturalOrder()));
-            default -> Comparator.comparing(TaskInfo::getCreateTime, Comparator.nullsLast(Comparator.naturalOrder()));
-        };
-
-        if (!ascending) {
-            comparator = comparator.reversed();
-        }
-
-        return tasks.stream().sorted(comparator).collect(Collectors.toList());
     }
 
     /**
